==> ppp1234lll/led/main_new/Hardware/src/bsp_rtc.c <==
#include "bsp_rtc.h"
#include "bsp.h"
#include <time.h>
#define ALARM_HOURS               12          // 0~23
#define ALARM_MINUTES             10          // 0~59
#define ALARM_SECONDS             00          // 0~59
#define RTC_BKP_DATA_LSI         0x32F2
#define RTC_BKP_DATA_LSE         0x32F3

uint8_t bsp_InitRTC(void)
{
	uint16_t bkpflag = 0;
	
	g_rtc_handle.Instance = RTC;
	g_rtc_handle.Init.HourFormat = RTC_HOURFORMAT_24;   /* RTC设置为24小时格式 */
	g_rtc_handle.Init.AsynchPrediv = 0x7F;              /* RTC异步分频系数(1~0x7F) */
	g_rtc_handle.Init.SynchPrediv = 0xFF;               /* RTC同步分频系数(0~0x7FFF) */
	g_rtc_handle.Init.OutPut = RTC_OUTPUT_DISABLE;
	g_rtc_handle.Init.OutPutPolarity = RTC_OUTPUT_POLARITY_HIGH;
	g_rtc_handle.Init.OutPutType = RTC_OUTPUT_TYPE_OPENDRAIN;

	/* 检查是不是第一次配置时钟 */
	bkpflag = rtc_read_bkr(0);                          /* 读取BKP0的值 */

	if (HAL_RTC_Init(&g_rtc_handle) != HAL_OK)
	{
		return 1;
	}

	if ((bkpflag != RTC_BKP_DATA_LSI) && (bkpflag != RTC_BKP_DATA_LSE))     /* 之前未初始化过, 重新配置 */
	{
		RTC_Set_Time(6, 59, 56, RTC_HOURFORMAT12_AM);   /* 设置时间, 根据实际时间修改 */
		RTC_Set_Date(20, 4, 22, 3);                     /* 设置日期 */
	}
	
	RTC_AlarmSet();
	return 0;
}

HAL_StatusTypeDef RTC_Set_Time(uint8_t hour,uint8_t min,uint8_t sec,uint8_t ampm)
{
	RTC_TimeTypeDef rtc_time_handle;

	rtc_time_handle.Hours = hour;
	rtc_time_handle.Minutes = min;
	rtc_time_handle.Seconds = sec;
	rtc_time_handle.TimeFormat = ampm;
	rtc_time_handle.DayLightSaving = RTC_DAYLIGHTSAVING_NONE;
	rtc_time_handle.StoreOperation = RTC_STOREOPERATION_RESET;

	return HAL_RTC_SetTime(&g_rtc_handle, &rtc_time_handle, RTC_FORMAT_BIN);
}

HAL_StatusTypeDef RTC_Set_Date(uint8_t year, uint8_t month, uint8_t date, uint8_t week)
{
	RTC_DateTypeDef rtc_date_handle;

	rtc_date_handle.Date = date;
	rtc_date_handle.Month = month;
	rtc_date_handle.WeekDay = week;
	rtc_date_handle.Year = year;

	return HAL_RTC_SetDate(&g_rtc_handle, &rtc_date_handle, RTC_FORMAT_BIN);
}

void RTC_set_Time(rtc_time_t rtc)
{
	// 自动计算星期并赋值
	rtc.week = get_week_form_time(rtc.year,rtc.month,rtc.data);
	
	// 根据小时判断12小时制的上下午（小时>12为下午，否则为上午）
	if(rtc.hour > 12)
		RTC_Set_Time(rtc.hour,rtc.min,rtc.sec,RTC_HOURFORMAT12_PM);
	else
		RTC_Set_Time(rtc.hour,rtc.min,rtc.sec,RTC_HOURFORMAT12_AM);

	// 设置日期（年份需转为两位数：如2024→24）
	RTC_Set_Date(rtc.year-2000,rtc.month,rtc.data,rtc.week);
	// 重复设置一次日期（确保硬件稳定写入）
	RTC_Set_Date(rtc.year-2000,rtc.month,rtc.data,rtc.week);
	
}

void RTC_Get_Time(rtc_time_t *rtc)
{
	RTC_TimeTypeDef rtc_time_handle;
	RTC_DateTypeDef rtc_date_handle;
	
	HAL_RTC_GetTime(&g_rtc_handle, &rtc_time_handle, RTC_FORMAT_BIN);
	rtc->hour = rtc_time_handle.Hours;
	rtc->min  = rtc_time_handle.Minutes;
	rtc->sec  = rtc_time_handle.Seconds;
  
	HAL_RTC_GetDate(&g_rtc_handle, &rtc_date_handle, RTC_FORMAT_BIN);
	rtc->year  = rtc_date_handle.Year+2000;
	rtc->month = rtc_date_handle.Month;
	rtc->data  = rtc_date_handle.Date;
	rtc->week  = rtc_date_handle.WeekDay;
}

void RTC_AlarmSet(void)
{
	RTC_AlarmTypeDef rtc_alarm_handle;
	
	rtc_alarm_handle.AlarmTime.Hours = ALARM_HOURS;         	     /* 小时 */
	rtc_alarm_handle.AlarmTime.Minutes = ALARM_MINUTES;     	        /* 分钟 */
	rtc_alarm_handle.AlarmTime.Seconds = ALARM_SECONDS;     	        /* 秒 */
	rtc_alarm_handle.AlarmTime.SubSeconds = 0;	
	rtc_alarm_handle.AlarmTime.TimeFormat = RTC_HOURFORMAT12_AM;
	
	rtc_alarm_handle.AlarmMask = RTC_ALARMMASK_DATEWEEKDAY;			/* 日期或者星期无效 */
	rtc_alarm_handle.AlarmSubSecondMask = RTC_ALARMSUBSECONDMASK_NONE;
	rtc_alarm_handle.AlarmDateWeekDaySel = RTC_ALARMDATEWEEKDAYSEL_DATE; /* 按星期 */
	rtc_alarm_handle.AlarmDateWeekDay = 1;                               /* 星期 */
	rtc_alarm_handle.Alarm = RTC_ALARM_A;                                   /* 闹钟A */
	HAL_RTC_SetAlarm_IT(&g_rtc_handle, &rtc_alarm_handle, RTC_FORMAT_BIN);
	
	HAL_NVIC_SetPriority(RTC_Alarm_IRQn, 3, 3);                             /* 抢占优先级1,子优先级2 */
	HAL_NVIC_EnableIRQ(RTC_Alarm_IRQn);
}

void RTC_Alarm_IRQHandler(void)
{
    HAL_RTC_AlarmIRQHandler(&g_rtc_handle);
}
